correct gitignore level for .idea folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .gradle
-build
+/build
 *.iml
-.idea
-local.properties
-captures/
-app.iml
+/.idea/libraries
+/.idea/workspace.xml
+/local.properties
+/captures
+.externalNativeBuild
+.DS_Store
