Added more files and directories to gitignore (#47)
* added files and directories to gitignore we don't need to change and push

* correct gitignore level for .idea folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .gradle
-build
-local.properties
+/build
+*.iml
+/.idea/libraries
+/.idea/workspace.xml
+/local.properties
+/captures
+.externalNativeBuild
+.DS_Store
