use OkHttpClient to get exchange rates test cases

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -23,4 +24,10 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    okHttpVersion = '3.9.0'
+    junitVersion = '4.12'
+    mockitoVersion = '1.10.19'
 }
