--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,15 @@ android {
             path "CMakeLists.txt"
         }
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include "armeabi-v7a"
+            universalApk false
+        }
+    }
 }
 
 dependencies {
