--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/code
     docker:
-      - image: circleci/android:api-27-alpha
+      - image: bitriseio/android-ndk
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
