--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme">
+        <activity android:name=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".onboarding.OnBoardingActivity"/>
+
         <activity
             android:name=".WalletActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -26,11 +34,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <service
@@ -39,7 +43,6 @@
             android:exported="false"
             android:label="Monero Wallet Service" />
 
-        <activity android:name=".onboarding.OnBoardingActivity"></activity>
     </application>
 
 </manifest>
