--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ task clean(type: Delete) {
 }
 
 ext {
+    apkName = 'monerujo'
     okHttpVersion = '3.9.0'
     junitVersion = '4.12'
     mockitoVersion = '1.10.19'
