--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath files('external-libs/gradle-witness.jar')
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.1.1'
     }
 }
 
@@ -27,6 +24,7 @@ task clean(type: Delete) {
 }
 
 ext {
+    apkName = 'monerujo'
     okHttpVersion = '3.9.0'
     junitVersion = '4.12'
     mockitoVersion = '1.10.19'
