--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 # keep build timestamps in APK
-android.keepTimestampsInApk = true
+android.keepTimestampsInApk = false
