--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,16 +46,16 @@ android {
     def abiCodes = ['armeabi-v7a': 1, 'arm64-v8a': 2, 'x86': 3, 'x86_64': 4]
 
     // Enumerate translated locales
-    def translatedLocales = []
+    def availableLocales = ["en"]
     new File("app/src/main/res/").eachFileMatch(~/^values-.*/) { file ->
         def languageTag = file.name.substring(7).replace("-r", "-")
-        translatedLocales.add(languageTag)
+        availableLocales.add(languageTag)
     }
 
     // APKs for the same app that all have the same version information.
     android.applicationVariants.all { variant ->
-        // Update string resource: translated_locales
-        variant.resValue("string", "translated_locales", translatedLocales.join(","))
+        // Update string resource: available_locales
+        variant.resValue("string", "available_locales", availableLocales.join(","))
         // Assigns a different version code for each output APK.
         variant.outputs.all {
             output ->
