--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ android {
         abi {
             enable true
             reset()
-            include 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            //include 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            include 'arm64-v8a'
             universalApk true
         }
     }
