--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,7 @@ android {
         abi {
             enable true
             reset()
-            //include 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
-            include 'arm64-v8a'
+            include 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
             universalApk true
         }
     }
