--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 155
-        versionName "1.10.5 'Node-O-matiC'"
+        versionName "1.10.5a 'Node-O-matiC'"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
@@ -27,6 +27,7 @@ android {
         stagenet {
             dimension 'net'
             applicationIdSuffix '.stage'
+            versionNameSuffix ' (stage)'
         }
         alpha {
             dimension 'type'
