--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,13 @@ jobs:
   build:
     working_directory: ~/code
     docker:
-      - image: bitriseio/android-ndk
+      - image: circleci/android:api-28-ndk
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
       - checkout
+      - run: yes | sdkmanager --licenses || exit 0
+      - run: yes | sdkmanager --update || exit 0
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
