--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,17 +112,17 @@ android {
 dependencies {
     implementation 'androidx.core:core:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation group: 'com.google.android.material', name: 'material', version: '1.3.0-alpha03'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
 
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
-    implementation "com.squareup.okhttp3:okhttp:$rootProject.ext.okHttpVersion"
-    implementation "com.burgstaller:okhttp-digest:2.0"
-    implementation "com.jakewharton.timber:timber:$rootProject.ext.timberVersion"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.burgstaller:okhttp-digest:2.1"
+    implementation "com.jakewharton.timber:timber:4.7.1"
 
     implementation 'com.nulab-inc:zxcvbn:1.3.0'
 
@@ -131,12 +131,11 @@ dependencies {
     implementation 'org.slf4j:slf4j-nop:1.7.30'
     implementation 'com.github.brnunes:swipeablerecyclerview:1.0.2'
 
-    // https://mvnrepository.com/artifact/com.github.aelstad/keccakj
     implementation 'com.github.aelstad:keccakj:1.1.0'
 
     testImplementation "junit:junit:$rootProject.ext.junitVersion"
     testImplementation "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
-    testImplementation "com.squareup.okhttp3:mockwebserver:$rootProject.ext.okHttpVersion"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
     testImplementation 'org.json:json:20180813'
     testImplementation 'net.jodah:concurrentunit:0.4.4'
 }
