change build to docker

--- a/external-libs/Makefile
+++ b/external-libs/Makefile
@@ -1,60 +1,69 @@
-#.PHONY: f-droid-sign f-droid-clean \
-#build-external-libs use-prebuilt-external-libs \
-#toolchain openssl boost wownero collect \
-#clean-external-libs \
-#f-droid-sign f-droid-clean \
-#gradle-release gradle-build gradle-sign gradle-clean \
-#apk-install remove-exif
+# ln -s /opt/monero monero
 
-#all: build-external-libs
+MONERO_BRANCH=`git -C monero branch | grep "^\*" | sed 's/^..//'`
+MONERUJO_BRANCH=`git -C . branch | grep "^\*" | sed 's/^..//'`
 
-#build-external-libs: clean-external-libs collect
+all: arm64-v8a armeabi-v7a x86_64 x86 include VERSION
 
-all: monero
+arm64-v8a: monero
+	-rm -rf arm64-v8a
+	-docker container rm monero-android-arm64 -f
+	docker build -f android64.Dockerfile -t monero-android-arm64 monero
+	docker create -it --name monero-android-arm64 monero-android-arm64 bash
+	docker cp monero-android-arm64:/opt/android/prefix/lib/. arm64-v8a/
+	docker cp monero-android-arm64:/src/build/release/lib/. arm64-v8a//monero
 
-monero: toolchain libsodium openssl boost monero_dl openssl_sysroot
-	script/monero-build.sh
+armeabi-v7a: monero
+	-rm -rf armeabi-v7a
+	-docker container rm monero-android-arm32 -f
+	docker build -f android32.Dockerfile -t monero-android-arm32 monero
+	docker create -it --name monero-android-arm32 monero-android-arm32 bash
+	docker cp monero-android-arm32:/opt/android/prefix/lib/. armeabi-v7a
+	docker cp monero-android-arm32:/src/build/release/lib/. armeabi-v7a/monero
 
-monero_dl:
-	script/monero-fetch.sh
+x86_64: monero
+	-rm -rf x86_64
+	-docker container rm monero-android-x86_64 -f
+	docker build -f android64_x86.Dockerfile -t monero-android-x86_64 monero
+	docker create -it --name monero-android-x86_64 monero-android-x86_64 bash
+	docker cp monero-android-x86_64:/opt/android/prefix/lib/. x86_64
+	docker cp monero-android-x86_64:/src/build/release/lib/. x86_64/monero
 
-toolchain:
-	script/toolchain-build.sh
+x86: monero
+	-rm -rf x86
+	-docker container rm monero-android-x86 -f
+	docker build -f android32_x86.Dockerfile -t monero-android-x86 monero
+	docker create -it --name monero-android-x86 monero-android-x86 bash
+	docker cp monero-android-x86:/opt/android/prefix/lib/. x86
+	docker cp monero-android-x86:/src/build/release/lib/. x86/monero
 
-openssl: toolchain openssl_dl
-	script/openssl-build.sh
+include: monero
+	-mkdir include
+	cp monero/src/wallet/api/wallet2_api.h include/
 
-openssl_sysroot:
-	script/openssl-install.sh
-
-openssl_dl:
-	script/openssl-fetch.sh
-	script/openssl-patch.sh
-
-boost: toolchain boost_dl
-	script/boost-build.sh
-
-boost_dl:
-	script/boost-fetch.sh
-
-libsodium: toolchain libsodium_dl
-	script/libsodium-build.sh
-
-libsodium_dl:
-	script/libsodium-fetch.sh
-
-install: all
-	script/install.sh
+VERSION:
+	echo MONERUJO `git -C . branch | grep "^\*" | sed 's/^..//'` with MONERO `git -C monero branch | grep "^\*" | sed 's/^..//'` > VERSION
 
 clean:
-	script/clean.sh
+	-docker container rm monero-android-arm64 -f
+	-docker container rm monero-android-arm32 -f
+	-docker container rm monero-android-x86_64 -f
+	-docker container rm monero-android-x86 -f
+	-rm -rf arm64-v8a
+	-rm -rf armeabi-v7a
+	-rm -rf x86_64
+	-rm -rf x86
+	-rm -rf include
+	-rm -f VERSION
 
 distclean: clean
-	find monero    -type f -a ! -name ".gitignore" -a ! -name "wallet2_api.h" -exec rm {} \;
-	find boost     -type f -a ! -name ".gitignore" -exec rm {} \;
-	find libsodium -type f -a ! -name ".gitignore" -exec rm {} \;
-	find openssl   -type f -a ! -name ".gitignore" -exec rm {} \;
+	-docker image rm monero-android-arm64 -f
+	-docker image rm monero-android-arm32 -f
+	-docker image rm monero-android-x86_64 -f
+	-docker image rm monero-android-x86 -f
+	-rm monero
 
-archive: libsodium openssl boost monero
-	echo "Packing external-libs"
-	tar czfv libsodium openssl boost monero external-libs.tgz
+monero:
+	$(error Please ln -s monero)
+
+.PHONY: all clean distclean include
