update & clean build (#15)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 30
     buildToolsVersion '29.0.3'
+    ndkVersion '17.2.4988734'
     defaultConfig {
         applicationId "com.m2049r.aeonwallet"
         minSdkVersion 21
